[package]
name = "edges"
# don't manually edit this version unless you're sure you want to circumvent the process documented in RELEASE.md
version = "0.3.2"
edition = "2021"
authors = ["@shnewto"]

description = "a library for getting the edges of objects in images with transparency"
readme = "README.md"
keywords = ["image", "edge", "transparency", "sprite", "bevy"]

homepage = "https://github.com/shnewto/edges"
repository = "https://github.com/shnewto/edges"

license = "MIT OR Apache-2.0"

[features]
default=[]
bevy=["dep:bevy"]

[dependencies]
glam = "0.25"
hashbrown = "0.14"
image = "0.25"
mashmap = "0.1"
ordered-float = "4.2"
thiserror = "1.0"

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_render"]
optional = true

[dev-dependencies]
raqote = "0.8"
open = "5.1"

[[example]]
name = "bevy-image"
required-features = ["bevy"]

[[example]]
name = "dynamic-image"
