[package]
name = "edges"
# don't manually edit this version unless you're sure you want to circumvent the process documented in RELEASE.md
version = "0.3.4"
edition = "2021"
authors = ["@shnewto"]

description = "a library for getting the edges of objects in images with transparency"
readme = "README.md"
keywords = ["image", "edge", "transparency", "sprite", "bevy"]

homepage = "https://github.com/shnewto/edges"
repository = "https://github.com/shnewto/edges"

license = "MIT OR Apache-2.0"

[lints.clippy]
cast_precision_loss = { level = "allow", priority = 1 }
pedantic = { level = "warn", priority = 0 }

[features]
default = ["bevy"]
glam-latest = ["dep:glam"]
bevy = ["dep:bevy_math", "dep:bevy_render"]

[dependencies]
image = "0.25"
rayon = "1.10.0"

[dependencies.glam]
version = "0.29"
optional = true

[dependencies.bevy_math]
version = "0.14"
default-features = false
optional = true

[dependencies.bevy_render]
version = "0.14"
default-features = false
optional = true

[dev-dependencies]
raqote = "0.8"
open = "5.1"

[[example]]
name = "bevy-image"
required-features = ["bevy"]

[[example]]
name = "dynamic-image"
