[package]
name = "edges"
# don't manually edit this version unless you're sure you want to circumvent the process documented in RELEASE.md
version = "0.7.0"
edition = "2021"
authors = ["@shnewto"]

description = "a library for getting the edges of objects in images with transparency"
readme = "README.md"
keywords = ["image", "edge", "transparency", "sprite", "bevy"]

homepage = "https://github.com/shnewto/edges"
repository = "https://github.com/shnewto/edges"

license = "MIT OR Apache-2.0"

exclude = ["assets/*", ".github/*", "examples/*"]
include = ["/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src/"]

[lints.clippy]
cast_precision_loss = { level = "allow", priority = 1 }
pedantic = { level = "warn", priority = 0 }

[features]
default = ["bevy", "parallel"]
glam-latest = ["dep:glam"]
bevy = ["dep:bevy_math", "dep:bevy_image", "binary_image/bevy"]
parallel = ["dep:rayon"]


[dependencies]
binary_image = "0.7"
derive_more = "1"
bitflags = "2"
image = { version = "0.25", default-features = false }
rayon = { version = "1", optional = true }
glam = { version = "0.29", optional = true }

[dependencies.bevy_math]
version = "0.15"
default-features = false
optional = true

[dependencies.bevy_image]
version = "0.15"
default-features = false
optional = true

[dev-dependencies]
raqote = "0.8"
open = "5.1"

[dev-dependencies.bevy_image]
version = "0.15"
default-features = false
features = ["png"]

[dev-dependencies.bevy_render]
version = "0.15"
default-features = false

[[example]]
name = "bevy-image"
required-features = ["bevy"]

[[example]]
name = "dynamic-image"
